--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-resource-tastypie",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "homepage": "https://github.com/mw-ferretti/angular-resource-tastypie",
   "authors": [
     "Marcos William Ferretti <ferretti.spo@gmail.com>"
@@ -29,6 +29,11 @@
   "dependencies": {
     "angular": ">=1.3.15",
     "angular-resource": ">=1.3.15"
+  },
+  "devDependencies": {
+    "grunt": "^1.0.1",
+    "grunt-cli": "^1.2.0",
+    "grunt-contrib-uglify": "^2.0.0"
   },
   "repository": {
     "type": "git",
