--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-resource-tastypie",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "RESTful AngularJs client for Django-Tastypie or equivalent schema.",
   "main": "src/angular-resource-tastypie.js",
   "directories": {
@@ -26,6 +26,10 @@
     "url": "https://github.com/mw-ferretti/angular-resource-tastypie/issues"
   },
   "homepage": "https://github.com/mw-ferretti/angular-resource-tastypie#readme",
+  "dependencies": {
+    "angular": ">=1.3.15",
+    "angular-resource": ">=1.3.15"
+  },
   "devDependencies": {
     "grunt": "^1.0.1",
     "grunt-cli": "^1.2.0",
